# send-value

./: .binpath  Cargo.toml
client/: Cargo.toml  build.rs  send_value.idl
client/src/: lib.rs
src/: lib.rs
tests/: gtest.rs  test.rs
