[package]
name = "send_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear"}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear"}
